# ymp

./: .gitignore  .gitlab-ci.yml  INRBUILD  LICENSE  Makefile  README.md  YMPBUILD  base-files_1_1_x86_64.ymp  build.sh  ctx.vala  inary-build-deps_1.0_amd64.buildinfo  inary-build-deps_1.0_amd64.changes  libinary.md  libymp.sym  meson.build  meson_options.txt  mkctx.sh  ymp_master_source.ymp  ympbuild
.github/workflows/: blank.yml
data/: bash-completion.sh  code-runner-gitea-webhook.py  debian-names.yaml  fix-turkish.sed  inary-mime.xml  inary.conf  inary.pc  org.turkman.ymp.extract.desktop  ymp-extra.h  ymp-mime.xml  ymp.conf  ymp.pc  ymp.yaml
data/code-runner-plugins/: docker  local
debian/: changelog  control  copyright  rules
doc/: coder-runner.rst  libymp.rst  sysconf.rst  ympbuild.rst  ympshell.rst
example/application/: array.c  run_script.c
example/plugin/: template.c
po/: POTFILES  meson.build  tr.mo  tr.po  ymp.pot
scripts/: chmount  detect-dep  detect-revdep  g++-ymp  gcc-ymp  git-ymp  inary-build  inary-template  remove-symver  ymp-build  ymp-chroot  ymp-template  ympstrap
src/: README.md  ccode.vala  color.vala  constants.h  gobject.vala  inary-work-schema.drawio  inary.vala  interpreter.vala  libinary.md  libymp.md  main.vala  operation.vala  operations.vala  process.vala  settings.vala  test.vala  wslblock.vala  ymp-build-schema.drawio  ymp-cli.vala  ymp-work-schema.drawio  ymp.vala
src/ccode/: archive-create.c  archive-extract.c  array.c  brainfuck.c  colorize.c  daemon.c  error.c  fetcher.c  fetcher_curl.c  fetcher_none.c  fetcher_soup.c  file.c  gettext.c  gobject.c  iniparser.c  job.c  logger.c  malloc.c  nostd.c  plugin.c  process.c  sandbox.c  signal.c  string.c  thread.c  ttysize.c  users.c  value.c  which.c
src/cli/: main.c  main.vala  shell.c  shell.vala
src/data/: code_runner.vala  dependency.vala  index.vala  inrbuild.vala  package.vala  pkgbuild.vala  quarantine.vala  repository.vala  ympbuild.vala
src/include/: archive_extract.h  array.h  error.h  jobs.h  logger.h  value.h
src/libc/: start.c
src/libc/x86_64/: start.s
src/operations/: build.vala  clear.vala  dummy.vala  echo.vala  exec.vala  exit.vala  extract.vala  fetch.vala  get.vala  help.vala  inarysh.vala  index.vala  install.vala  list-available.vala  list-installed.vala  list.vala  remove.vala  run-sandbox.vala  set.vala  setget.vala  update.vala  upgrade.vala
src/operations/misc/: clear.vala  copy.vala  cowcat.vala  dummy.vala  echo.vala  exec.vala  exit.vala  file.vala  help.vala  httpd.vala  kill.vala  remove_file.vala  shitcat.vala  title.vala
src/operations/package-manager/: bootstrap.vala  build.vala  clean.vala  index.vala  info.vala  install.vala  list.vala  mirror.vala  remove.vala  repository.vala  search.vala  template.vala  update.vala  upgrade.vala
src/operations/shell/: amoguscat.vala  chroot.vala  clear.vala  cowcat.vala  dummy.vala  echo.vala  exec.vala  exit.vala  setget.vala  shitcat.vala  title.vala
src/operations/utility/: brainfuck.vala  code_runner.vala  compress.vala  debian.vala  extract.vala  fetch.vala  file.vala  help.vala  httpd.vala  iniget.vala  key.vala  kill.vala  revdep-rebuild.vala  run-sandbox.vala  setget.vala  shell.vala  sysconf.vala  yamlget.vala
src/plugin/: template.vala
src/shcode/: amogus.sh  code_runner_template.sh  flag.sh  pkgbuild_header.sh  ympbuild_header.sh
src/start/: aarch64.s  arm.s  i686.s  x86_64.s
src/tools/: cowcat.vala  extract.vala  fetch.vala  inary-cli.vala  inarysh.vala  iniget.vala  lolcat.vala  revdep-rebuild.vala  run-sandbox.vala  shitcat.vala  yamlget.vala
src/util/: archive.vala  array.vala  build.vala  code-runner.vala  command.vala  debian.vala  fetcher.vala  file.vala  gpg.vala  httpd.vala  iniparser.vala  interface.vala  logger.vala  process.vala  string.vala  ttysize.vala  value.vala  yamlparser.vala
src/util/builder_target/: deb.vala  dummy.vala  ymp.vala
src/util/code_runner_plugins/: docker.vala  dummy.vala  local.vala  script.vala
src/vapi/: archive.vapi  array.vapi  jobs.vapi  libc.vapi  logger.vapi  value.vapi
test/: test.inarysh  test.vala  test.ympsh  test2.vala
test/data/: metadata-binary.yaml
test/example/: files  metadata-binary.yaml  metadata-source.yaml  package.ymp  test.ini  test.yaml  test.ympsh
test/example/repo/: inary-index.yaml
test/example/repo/b/bash/: bash-5.0-x86_64.inary
test/example/repo/n/ncurses/: ncurses-8.0-x8_64.inary
test/example/repo/r/readline/: readline-8.0-x8_64.inary
test/example/rootfs/etc/: inary.conf
test/example/rootfs/var/lib/inary/index/: test.yaml
test/example/rootfs/var/lib/inary/metadata/: aaa.yaml  bbb.yaml
test/example/rootfs/var/lib/inary/quarantine/files/: ncurses
test/example/rootfs/var/lib/inary/quarantine/metadata/: ncurses.yaml
test/example/source-package/: INRBUILD  PKGBUILD  hello_2.10_source.inary  hello_2.10_source.ymp  hello_2.10_x86_64.inary  hello_2.10_x86_64.ymp  inary-index.yaml  metadata.yaml  source.inary  ymp-index.yaml
test/rootfs/var/lib/ymp/index/: test.yaml
tool/: check.sh  mkbin.sh  mkctx.sh  mkdoc.sh  no_symver.sh  preprocessor.sh
