option('static', type: 'boolean', value: 'false')
option('test', type: 'boolean', value: 'false')
option('doc', type: 'boolean', value: 'false')
option('tools', type: 'boolean', value: 'true')
option('scripts', type: 'boolean', value: 'true')
option('colorize', type: 'boolean', value: 'true')
option('ignore-oem', type: 'boolean', value: 'false')
option('libarchive', type: 'boolean', value: 'true')
option('libreadline', type: 'boolean', value: 'true')
option('libcurl', type: 'boolean', value: 'true')
option('libbrotli', type: 'boolean', value: 'true')
option('storagedir', type: 'string', value: 'var/lib/ymp')

