option('static', type: 'boolean', value: 'false')
option('shared', type: 'boolean', value: 'false')
option('locale', type: 'boolean', value: 'true')
option('experimental', type: 'boolean', value: 'false')
option('test', type: 'boolean', value: 'false')
option('doc', type: 'boolean', value: 'false')
option('tools', type: 'boolean', value: 'true')
option('scripts', type: 'boolean', value: 'false')
option('colorize', type: 'boolean', value: 'true')
option('check_oem', type: 'boolean', value: 'true')
option('libarchive', type: 'boolean', value: 'true')
option('libreadline', type: 'boolean', value: 'true')
option('libcurl', type: 'boolean', value: 'true')
option('libbrotli', type: 'boolean', value: 'true')
option('storagedir', type: 'string', value: 'var/lib/ymp')
option('distrodir', type: 'string', value: 'lib/turkman')
option('gobject', type: 'boolean', value: 'false')

